--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,42 +1,36 @@
 name: CI Workflow
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
 jobs:
-  build:
+  validate-code:
     runs-on: ubuntu-latest
-
     steps:
       # 1. Checkout repository
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2. Setup Node.js (opsional, jika ada JS build tools)
+      # 2. Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      # 3. Install dependencies (jika ada package.json)
-      - name: Install dependencies
+      # 3. Install linting tools
+      - name: Install linters
         run: |
-          if [ -f package.json ]; then
-            npm install
-          fi
+          npm install -g htmlhint stylelint eslint
 
-      # 4. Build project (opsional, jika ada script build)
-      - name: Build project
-        run: |
-          if [ -f package.json ]; then
-            npm run build
-          else
-            echo "No build step, static HTML/CSS/JS project"
-          fi
+      # 4. Validate HTML
+      - name: Run HTMLHint
+        run: htmlhint "**/*.html"
 
-      # 5. Gunakan GitHub Secret (API_KEY)
-      - name: Use API Key
-        run: echo "API Key is ${{ secrets.API_KEY }}"
+      # 5. Validate CSS
+      - name: Run Stylelint
+        run: stylelint "**/*.css"
+
+      # 6. Validate JavaScript
+      - name: Run ESLint
+        run: eslint "**/*.js"
