--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,12 @@ jobs:
   validate-code:
     runs-on: ubuntu-latest
     steps:
-      # 1. Checkout repository
+      # 1. Checkout repository & enkripsi API
       - name: Checkout code
         uses: actions/checkout@v3
-
+      - name: Run script with secret 
+        run: echo "API Key is ${{ secrets.https://www.ifixit.com/api/2.0 }}"      
+      
       # 2. Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
